2023-09-03: Ver. 0.1-34
  * Remove the meta table from the doc.
  * Modify CITATION.

2022-10-24: Ver. 0.1-32
  * Fix more "(theta^(mut.step - ss)) %*% diag(poolPI)" errors in the
    haplo.post.prob() function.

2022-10-01: Ver. 0.1-31
  * Fix empty while() and for() warnings caught by clang.
  * Fix \_ and \# warnings caught by checkRd.
  * Change "http" to "https" in some Rd files.
  * Use "is()" to replace "class()" inside the "if()" in some R code.
  * Fix "stric-prototypes" warnings by adding "void" to functions
    without arguments.
  * Fix "deprecated-non-prototype" warnings.
  * Fix "(theta^(mut.step - ss)) %*% diag(poolPI)" error in the
    haplo.post.prob() function.

2021-02-09: Ver. 0.1-30
  * Change http to https.
  * Change \A, \G, \C, and \T in vignettes to avoid conflicts.

2020-05-10: Ver. 0.1-29
  * Fix warning '__builtin_strncpy' output truncated due to
    "-Wstringop-truncation" by gcc10.

2019-12-01: Ver. 0.1-28
  * Fix multiple definition warnings due to "-fno-common" as default in gcc-10.

2019-11-28: Ver. 0.1-27
  * Fix a compiler warning.

2019-09-10: Ver. 0.1-26
  * Fix a bug in "get.rooted.tree.height", see "https://github.com/snoweye/phyclust/issues/5" for details.

2019-08-23: Ver. 0.1-25
  * Fix illegal character encoding in string literal.
  * Minors.

2019-03-20: Ver. 0.1-24
  * Push some PROTECT and UNPROTECT back within the call.

2019-03-07: Ver. 0.1-23
  * Move PROTECT to the caller functions.

2017-11-18: Ver. 0.1-21
  * Fix a warning from CRAN as
    phyclust/phyclust_optim_nmmin.c:260:21: warning: ‘%5d’ directive writing
    between 5 and 10 bytes into a region of size 6 [-Wformat-overflow=] 

2017-08-05: Ver. 0.1-20
  * Fix call stack unbalance.

2017-04-07: Ver. 0.1-19
  * Add UNPROTECT() to several C files.

2016-12-10: Ver. 0.1-18
  * Migrate all documents to the new website.

2016-07-14: Ver. 0.1-17
  * Fix a read.table bug.

2015-11-25: Ver. 0.1-16