@@ -1,6 +1,8 @@
 2023-09-03: Ver. 0.1-34
   * Remove the meta table from the doc.
   * Modify CITATION.
+  * Replace "sprintf()" in C.
+  * Fix use of unary operator that may be intended as compound assignment (-=).
 
 2022-10-24: Ver. 0.1-32
   * Fix more "(theta^(mut.step - ss)) %*% diag(poolPI)" errors in the
